Wed Aug 11 07:45:11 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeProjectCreator.pm:
        * modules/AutomakeWorkspaceCreator.pm:
        * modules/BMakeProjectCreator.pm:
        * modules/BMakeWorkspaceCreator.pm:
        * modules/CBXProjectCreator.pm:
        * modules/Creator.pm:
        * modules/DirectoryManager.pm:
        * modules/Driver.pm:
        * modules/GHSWorkspaceCreator.pm:
        * modules/HTMLProjectCreator.pm:
        * modules/MakeWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:
        * modules/ProjectCreator.pm:
        * modules/SLEProjectCreator.pm:
        * modules/TemplateParser.pm:
        * modules/WorkspaceCreator.pm:

          Encapsulated the VMS changes related to dirname into a single
          method (mpc_dirname) that gets called instead dirname.  Thanks to
          Martin Corino <mcorino@remedy.nl> for verifying my changes.

Wed Aug 11 10:08:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bmake.mpd:
          Corrected handling of resource files so that we can handle the
          resource files in the TAO libraries

Tue Aug 10 17:10:38 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * automake.mpd:
          Add initial support for automake conditionals with <%requires%>
          and <%avoids%>.
          Remove extra spaces before backslashes in _CPPFLAGS.

Tue Aug 10 09:10:36 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeWorkspaceCreator.pm:
        * templates/make.mpd:

          Modifications to ensure that generated files get built before
          anything else.

Mon Aug  9 07:50:47 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug in the code that determines which generated files get
          added automatically.  The array that can exist in the components
          list could be undefined and in that case nothing got added
          automatically.
